Add values for input list

--- a/inst/Rmd/flexdashboard_demo.Rmd
+++ b/inst/Rmd/flexdashboard_demo.Rmd
@@ -11,8 +11,8 @@ runtime: shiny
 
 ```{r input_demo, eval = FALSE}
 input <- list(
-  displ = "",
-  year = ""
+  displ = 1.8,
+  year = 2008
 )
 ```
 
