--- a/README.Rmd
+++ b/README.Rmd
@@ -12,38 +12,38 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# shinyloadr
+# shinysim
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-Troubleshooting reactive data in a flexdashboard can be difficult. The goal of this package is to convert reactive data frames into functions that will read from your raw data and become available in your global environment. The main function will also recommended that you put a dummy `input` list in your Rmd to simulate the reactive inputs. You can learn more about a dummy input list in [this vignette](https://rjake.github.io/shinyloadr/articles/tips-and-tricks.html).
+Troubleshooting reactive data in a flexdashboard can be difficult. The goal of this package is to convert reactive data frames into functions that will read from your raw data and become available in your global environment. The main function will also recommended that you put a dummy `input` list in your Rmd to simulate the reactive inputs. You can learn more about a dummy input list in [this vignette](https://rjake.github.io/shinysim/articles/tips-and-tricks.html).
 
 
 ## Installation
 <!--  
-  You can install the released version of `shinyloadr` from [CRAN](https://CRAN.R-project.org) with:
+  You can install the released version of `shinysim` from [CRAN](https://CRAN.R-project.org) with:
   
   ``` r
-  install.packages("shinyloadr")
+  install.packages("shinysim")
   ```
 
 -->
 
-You can install the development version from [GitHub](https://github.com/rjake/shinyloadr) with:
+You can install the development version from [GitHub](https://github.com/rjake/shinysim) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("rjake/shinyloadr")
+devtools::install_github("rjake/shinysim")
 ```
 ## Example
 
 There is a dummy flexdashboard available when the package is installed for you to see how this works. 
 
 ```{r example, eval = FALSE}
-library(shinyloadr)
+library(shinysim)
 
-system.file(package = "shinyloadr", "Rmd/test_dashboard_no_inputs.Rmd") %>% 
+system.file(package = "shinysim", "Rmd/test_dashboard_no_inputs.Rmd") %>% 
  load_reactive_objects()
 ```
 
