--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Troubleshooting reactive data in a flexdashboard can be difficult. The goal of this package is to convert reactive data frames into functions that will read from your raw data and become available in your global environment. The main function will also recommended that you put a dummy `input` list in your Rmd to simulate the reactive inputs. You can learn more about a dummy input list in [this vignette](https://rjake.github.io/shinysim/articles/tips-and-tricks.html).
+Troubleshooting reactive data in a shiny app or flexdashboard can be difficult. The goal of this package is to simulate the reactive environment that is created when you launch your app without having to actually run the app. It is the hope that this will save you time and allow you to itterate more quickly. The package converts reactive data frames into functions that will read from your raw data and become available in your global environment. The main function will also recommended that you put a create `dummy_input` in your script or just `input` in a flexdashboard to simulate the reactive inputs. You can learn more about dummy input lists in [this vignette](https://rjake.github.io/shinysim/articles/tips-and-tricks.html). There is also a function to view your UI elemnts in the viewer pane (see below).
 
 
 ## Installation
@@ -36,7 +36,7 @@ You can install the development version from [GitHub](https://github.com/rjake/s
 # install.packages("devtools")
 devtools::install_github("rjake/shinysim")
 ```
-## Example
+## Usage
 
 There is a dummy flexdashboard available when the package is installed for you to see how this works. 
 
@@ -72,15 +72,47 @@ Do you want to continue?
 '))
 ```
 
-Hitting `1` will then update your global environment with all raw data and assignments, your dummy `input` list, and all reactive objects converted to functions.
+Hitting `1` will then update your global environment with all raw data and assignments, your dummy `input` list, and all reactive objects converted to functions. As functions, the code will keep all the data manipulation and reference your dummy `input` list. Note: **this function does not change your files**; the manipulation happens within the function.
 
-There are additional arguments you can use to resart R or to clear the environment. The `keep` and `remove` arguments take regular expressions as a pattern match. To get an exact match, use the `^` and `$` to signify the beginning and end (ex. `^your_text$`). To list objects, separate them with a `|`. as shown below.
+There are additional arguments you can use to resart R or to clear the environment. The `keep` argument takes a regular expression as the pattern match. To get an exact match, use the `^` and `$` to signify the beginning and end (ex. `^your_text$`). To list objects, separate them with a `|`. as shown below.
 
 ```{r, eval = FALSE}
 load_reactive_objects(
   ...,
   clear_environment = TRUE, 
   keep = "test_|^df$|raw_data", # objects to keep
-  remove = "input"              # objects to remove 
 )
 ```
+
+The package also has a function to view UI elements in one of two ways:
+```{r, eval = FALSE}
+shiny::selectInput(
+  "state",
+  "Choose a state:",
+  list(
+    East = c("NY", "NJ", "CT"),
+    West = c("WA", "OR", "CA"),
+    Midwest = c("MN", "WI", "IA")
+  )
+)
+
+# the output will automatically be used here
+view_ui()
+```
+
+You can also pipe it
+```{r, eval = FALSE}
+shiny::selectInput(
+  "state",
+  "Choose a state:",
+  list(
+    East = c("NY", "NJ", "CT"),
+    West = c("WA", "OR", "CA"),
+    Midwest = c("MN", "WI", "IA")
+  )
+) %>% view_ui(close_after = NULL)
+```
+
+Note that `close_after` is set to `NULL` in this example. The `view_ui()` function launches an app and defualts to closing after 5 seconds. You can adjusts how long it runs or use `NULL` and stop it manually by using the stop sign.:red_circle:
+
+<img src="man/figures/view_ui.png"/>
