Comment out library(shiny)

--- a/inst/Rmd/flexdashboard_demo.Rmd
+++ b/inst/Rmd/flexdashboard_demo.Rmd
@@ -19,7 +19,7 @@ input <- list(
 
 ```{r setup}
 library(tidyverse)
-library(shiny)        #renderPlot, renderTable, sliderInput
+#library(shiny)        #renderPlot, renderTable, sliderInput
 library(shinyWidgets) #radioGroupButtons
 
 raw_data <- mpg 
